New design layout Class Control - Phong Nguyen

--- a/src/client/style/appstyle.css
+++ b/src/client/style/appstyle.css
@@ -10,3 +10,6 @@
       font-weight: 600;
       text-align: left;
     }
+    button, textarea, input, select{
+      outline: none!important;
+    }
