--- a/src/client/templates/student_list.html
+++ b/src/client/templates/student_list.html
@@ -2,7 +2,7 @@
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong><span class="glyphicon glyphicon-th"></span> Quản lí học sinh</strong>
+        <strong><span class="glyphicon glyphicon-th"></span> Danh sách học sinh</strong>
       </div>
       <div class="panel-body notification-area">
         <div class="container-fluid">
