--- a/src/client/templates/student_list.html
+++ b/src/client/templates/student_list.html
@@ -12,13 +12,13 @@
                 <div class="form-group">
                   <label class="control-label col-md-4 col-sm-2 input-sm">Mã Học Sinh:</label>
                   <div class="col-md-8 col-sm-10">
-                    <input type="text" class="form-control input-sm">
+                    <input ng-model="options.studentCode" type="text" class="form-control input-sm">
                   </div>
                 </div>
                 <div class="form-group">
                   <label class="control-label col-md-4 col-sm-2 input-sm">Họ Tên:</label>
                   <div class="col-md-8 col-sm-10">
-                    <input type="text" class="form-control input-sm">
+                    <input ng-model="options.name" type="text" class="form-control input-sm">
                   </div>
                 </div>
               </div>
@@ -26,8 +26,8 @@
                 <div class="form-group">
                   <label class="control-label col-md-4 col-sm-2 input-sm">Giới Tính</label>
                   <div class="col-md-8 col-sm-10">
-                    <select class="form-control input-sm" name="Username">
-                        <option class="placeholder-option" value="">Tất cả</option>
+                    <select ng-model="options.gender" class="form-control input-sm">
+                        <option value="">Tất cả</option>
                         <option value="1">Nam</option>
                         <option value="0">Nữ</option>                                                
                     </select>
@@ -35,9 +35,8 @@
                 </div>
                 <div class="form-group">
                   <label class="control-label col-md-4 col-sm-2 input-sm">Email</label>
-
                   <div class="col-md-8 col-sm-10">
-                    <input type="text" class="form-control input-sm">
+                    <input ng-model="options.email" type="text" class="form-control input-sm">
                   </div>
                 </div>
 
@@ -46,44 +45,45 @@
                 <div class="form-group">
                   <label class="control-label col-md-4 col-sm-2 input-sm">Ngày Sinh từ:</label>
                   <div class="col-md-8 col-sm-10">
-                    <input type="text" class="form-control input-sm">
+                    <input ng-model="options.birthdayFrom" type="text" class="form-control input-sm">
                   </div>
                 </div>
                 <div class="form-group">
                   <label class="control-label col-md-4 col-sm-2 input-sm">Ngày Sinh Đến:</label>
                   <div class="col-md-8 col-sm-10">
-                    <input type="text" class="form-control input-sm">
+                    <input ng-model="options.birthdayTo" type="text" class="form-control input-sm">
                   </div>
                 </div>
               </div>
               <div class="col-md-3">
                 <div class="form-group">
                   <label class="control-label col-md-4 col-sm-2 input-sm">Địa chỉ</label>
-
                   <div class="col-md-8 col-sm-10">
-                    <input ng-model="test" type="text" class="form-control input-sm">
+                    <input ng-model="options.address" type="text" class="form-control input-sm">
                   </div>
                 </div>
                 <div class="form-group">
                   <div class="col-xs-12 text-right">
-                    <button type="submit" class="btn btn-primary btn-xs" ng-click=""><i class="fa fa-search"></i> Tìm</button>
-                    <button type="button" class="btn btn-primary btn-xs" ng-click=""><i class="fa fa-reply"></i> Reset</button>
+                    <button type="submit" class="btn btn-primary btn-xs" ng-click="getStudentList()"><i class="fa fa-search"></i> Tìm</button>
+                    <button type="button" class="btn btn-primary btn-xs" ng-click="reset()"><i class="fa fa-reply"></i> Reset</button>
                   </div>
                 </div>
               </div>
             </div>
           </form>
 
-          <div class="row form-horizontal" style="min-height: 50px">
-            <div class="col-md-12">
-              <div class="btn-group">
-                <button type="button" class="btn btn-primary btn-xs" ng-click=""><i class="fa fa-plus-circle"></i> Thêm</button>
-                <button type="button" class="btn btn-primary btn-xs" ng-click="" ng-disabled="1"><i class="fa fa-pencil"></i> Sửa</button>
-                <button type="button" class="btn btn-primary btn-xs" ng-click="" ng-disabled="1"><i class="fa fa-times"></i> Xoá</button>
-              </div>
+          <div class="row form-horizontal">
+            <div class="btn-group">
+              <button type="button" class="btn btn-primary btn-xs" ng-click="addStudent()"><i class="fa fa-plus-circle"></i> Thêm</button>
+              <button type="button" class="btn btn-primary btn-xs" ng-click="viewStudent()" ng-disabled="!selectedRow"><i class="fa fa-id-card-o"></i> Xem</button>
+              <button type="button" class="btn btn-primary btn-xs" ng-click="editStudent()" ng-disabled="!selectedRow"><i class="fa fa-pencil"></i> Sửa</button>
+              <button type="button" class="btn btn-primary btn-xs" ng-click="removeStudent()" ng-disabled="!selectedRow"><i class="fa fa-times"></i> Xoá</button>
             </div>
           </div>
-          <div id="grid1" ui-grid="studentList" class="grid"><span ng-show="studentList.data.length==0" class="text-center">Không có dữ liệu</span></div>
+          <div id="studentList" ui-grid-selection ui-grid="studentList" class="grid"><span ng-show="studentList.data.length==0" class="grid-status">{{studentListStatus}}</span></div>
+          <div id="handle-student-area" ng-show="showHandleArea">
+            <div data-student-handle="studentData"></div>
+          </div>
         </div>
       </div>
     </div>
