--- a/src/client/style/appstyle.css
+++ b/src/client/style/appstyle.css
@@ -17,7 +17,18 @@
     button, textarea, input, select{
       outline: none!important;
     }
-
+  .loading {
+      width: 40px;
+      height: 40px;
+      position: fixed;
+      margin: 100px auto;
+      z-index: 9999;
+      top: 29%;
+      left: 49%;
+  }
+  .loading i{
+    color: #da9a32;
+  }
     /*ui-grid - START*/
     .ui-grid-column-menu-button{
       display: none;
