--- a/src/client/style/appstyle.css
+++ b/src/client/style/appstyle.css
@@ -3,16 +3,11 @@ body {
     font-family: arial;
     color: #333!important;
 }
-
-button.btn-primary {
-    height: 30px !important;
-    min-width: 70px;
-    font-weight: 600;
-    text-align: left;
-    padding: 1px 5px;
-    font-size: 12px;
-    line-height: 1.5;
-    border-radius: 3px;
+.form-control:focus {
+    border-color: #b38864;
+    outline: 0;
+    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(214, 166, 125);
+    box-shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 8px rgb(214, 166, 125);
 }
 button, textarea, input, select{
     outline: none!important;
@@ -43,3 +38,113 @@ button, textarea, input, select{
     left: 40%;
 }
 /*ui-grid - END*/
+
+/*button - START*/
+button.btn-primary {
+    height: 30px !important;
+    min-width: 70px;
+    font-weight: 600;
+    text-align: left;
+    padding: 1px 5px;
+    font-size: 12px;
+    line-height: 1.5;
+    border-radius: 3px;
+}
+.btn-primary {
+    color: #fff;
+    background-color: #ce7426!important;
+    border-color: #b9651c!important;
+}
+.btn-primary:hover {
+    color: #fff;
+    background-color: #bb6820!important;
+    border-color: #94541d!important;
+}
+.btn-primary.active, .btn-primary:active, .open>.dropdown-toggle.btn-primary, 
+.btn-primary.focus, .btn-primary:focus {
+    color: #e7f3c7;;
+    background-color: #9c571c!important;
+    border-color: #844a1a!important;
+}
+.btn.disabled, .btn[disabled], fieldset[disabled] .btn,
+.btn.disabled:hover, .btn[disabled]:hover, fieldset[disabled] .btn:hover {
+    cursor: not-allowed;
+    filter: alpha(opacity=65);
+    -webkit-box-shadow: none;
+    box-shadow: none;
+    opacity: .75;
+    background-color: #b7b1b1!important;
+    border-color: #ad9a94!important;
+}
+/*button - END*/
+
+/*Menu - START*/
+#page-wrapper:not(.open) ul.sidebar .sidebar-title.separator, .sidebar-footer, ul.sidebar .sidebar-list a:hover, ul.sidebar .sidebar-main a {
+    background: #3c1e05;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
+}
+#page-wrapper:not(.open) ul.sidebar .sidebar-title.separator, .sidebar-footer, ul.sidebar .sidebar-list a:hover, ul.sidebar .sidebar-main a:hover {
+    cursor: pointer;
+    color: #e7f3d5;
+    text-shadow: 0px 1px 2px rgb(0, 0, 0);
+}
+#sidebar-wrapper {
+    color: #fff;
+    background: #4e2706;
+}
+ul.sidebar .sidebar-list a {
+    text-indent: 25px;
+    font-size: 15px;
+    color: #e7f3d5;
+    line-height: 40px;
+    -webkit-transition: all .2s linear;
+    transition: all .2s linear;
+    text-shadow: 0px 1px 2px rgb(60, 30, 5);
+}
+ul.sidebar .sidebar-list a:hover {
+    text-indent: 25px;
+    font-size: 15px;
+    color: #fff;
+    line-height: 40px;
+}
+/*Menu - END*/
+
+/*Panel - START*/
+.panel-default {
+    border-color: #8a613e;
+    -webkit-transition: all .25s linear;
+    transition: all .25s linear;
+    border-width: 2px;
+}
+.panel-default>.panel-heading {
+    color: #fbf7f4;
+    background-color: #8a613e;
+    border-color: #8a613e;
+    text-shadow: 0px 1px 2px rgb(111, 75, 45);
+    border-top-left-radius: 1px;
+    border-top-right-radius: 1px;
+}
+.panel-body {
+    padding: 15px;
+    background-color: #f5f0ec;
+    border-bottom-left-radius: 2px;
+    border-bottom-right-radius: 2px;
+}
+.row.header{
+  box-shadow: 0 1px 2px rgba(80, 56, 12, 0.15);
+  background: #f5f0ec;
+  border-bottom: 1px solid #e2d8d1;
+}
+/*Panel - END*/
+
+/*Modal - START*/
+.modal-header,.modal-footer{
+  padding: 10px 15px;
+}
+.modal-body{
+  padding: 25px 15px;
+}
+/*Modal - END*/
+
+
