--- a/src/client/style/appstyle.css
+++ b/src/client/style/appstyle.css
@@ -37,6 +37,44 @@ button, textarea, input, select{
     top: 50px;
     left: 40%;
 }
+
+
+
+.ui-grid {
+    border: 1px solid #258a3f!important;
+}
+.ui-grid-header {
+    border-bottom: 1px solid #258a3f!important;
+}
+.ui-grid-top-panel {
+  text-shadow: 0px 1px 2px rgba(119, 187, 118, 0.76);
+  background: #11983b;  
+  background: -webkit-gradient(linear, left bottom, left top, color-stop(0, #8dc383), color-stop(1, #11983b))!important;
+}
+.ui-grid-pinned-container.ui-grid-pinned-container-left .ui-grid-header-cell:last-child {
+    border-right-color: #258a3f!important;
+}
+.ui-grid-header-cell {
+    border-color: #258a3f!important;
+}
+.ui-grid-pinned-container.ui-grid-pinned-container-left .ui-grid-cell:last-child {
+    border-right-color: #dad1c9!important;
+}
+.ui-grid-row .ui-grid-cell.ui-grid-row-header-cell {
+    border-bottom: solid 1px #dad1c9!important;
+}
+.ui-grid-cell {
+    border-color: #dad1c9!important;
+ }
+.ui-grid-cell-contents {
+    border-bottom: 1px solid #dad1c9!important;
+}
+.ui-grid-header .ui-grid-cell-contents {
+    border-bottom: 1px solid transparent!important;
+}
+.ui-grid-header-cell:last-child .ui-grid-column-resizer.right {
+    border-right: 1px solid #258a3f!important;
+}
 /*ui-grid - END*/
 
 /*button - START*/
