--- a/src/client/templates/school_year.html
+++ b/src/client/templates/school_year.html
@@ -2,7 +2,7 @@
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong><span class="glyphicon glyphicon-th"></span> Quy Định</strong>
+        <strong><span class="glyphicon glyphicon-th"></span> Tạo năm học</strong>
       </div>
       <div class="panel-body notification-area">
         <div class="container-fluid">
@@ -13,14 +13,14 @@
                   <label class="control-label col-md-4 col-sm-2 input-sm">Năm học</label>
 
                   <div class="col-md-8 col-sm-10">
-                    <input type="text" class="form-control input-sm">
+                    <input type="text" class="form-control input-sm" disabled ng-model=newSchoolYear>
                   </div>
                 </div>
               </div>
               <div class="col-md-3">
                 <div class="form-group">
                   <div class="col-xs-12 text-right">
-                    <button type="submit" class="btn btn-primary btn-xs" ng-click=""><i class="fa fa-plus"></i> Tạo Năm Học</button>
+                    <button type="submit" class="btn btn-primary btn-xs" ng-click="createSchoolYear()"><i class="fa fa-plus"></i> Tạo Năm Học</button>
                   </div>
                 </div>
               </div>
