Improve layouts for all pages

--- a/src/client/style/appstyle.css
+++ b/src/client/style/appstyle.css
@@ -185,4 +185,8 @@ ul.sidebar .sidebar-list a:hover {
 }
 /*Modal - END*/
 
-
+@media (max-width: 767px){
+     .container-fluid{
+        padding: 5px;
+    }
+}
