--- a/src/client/templates/class.html
+++ b/src/client/templates/class.html
@@ -2,17 +2,17 @@
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong><span class="glyphicon glyphicon-th"></span> Lớp học</strong>
+        <strong><span class="fa fa-users"></span> Lớp học</strong>
       </div>
       <div class="panel-body notification-area">
         <div class="container-fluid">
           <form role="form" name="class_management" id="class_management">
             <div class="row form-horizontal">
-               <div class="col-md-3">
+               <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Khối</label>
+                  <label class="control-label col-xs-5 input-sm">Khối</label>
 
-                  <div class="col-md-8 col-sm-10">
+                  <div class="col-xs-7">
                     <select class="form-control input-sm" name="Username">
                         <option class="placeholder-option" value="">Tất cả</option>
                         <option value="1" selected>10</option>
@@ -22,11 +22,11 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Lớp</label>
+                  <label class="control-label col-xs-5 input-sm">Lớp</label>
 
-                  <div class="col-md-8 col-sm-10">
+                  <div class="col-xs-7">
                     <select class="form-control input-sm" name="Username">
                         <option class="placeholder-option" value="">Tất cả</option>
                         <option value="1" selected>10A1</option>
