--- a/src/client/templates/report.html
+++ b/src/client/templates/report.html
@@ -2,17 +2,17 @@
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong><span class="glyphicon glyphicon-th"></span> Báo cáo</strong>
+        <strong><span class="fa fa-file-text-o"></span> Báo cáo</strong>
       </div>
       <div class="panel-body notification-area">
         <div class="container-fluid">
           <form role="form" name="report" id="report">
             <div class="row form-horizontal">
-               <div class="col-md-3">
+               <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Khối</label>
+                  <label class="control-label col-xs-5 input-sm">Khối</label>
 
-                  <div class="col-md-8 col-sm-10">
+                  <div class="col-xs-7">
                     <select class="form-control input-sm" name="Username">
                         <option class="placeholder-option" value="" selected>Tất cả</option>
                         <option value="10">10</option>
@@ -21,12 +21,11 @@
                     </select>
                   </div>
                 </div>
-              </div>
-              
-              <div class="col-md-3">
+              </div>              
+              <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Học kì</label>
-                  <div class="col-md-8 col-sm-10">
+                  <label class="control-label col-xs-5 input-sm">Học kì</label>
+                  <div class="col-xs-7">
                     <select class="form-control input-sm" name="Username">
                         <option class="placeholder-option" value="" selected>Cả năm</option>
                         <option value="1">1</option>
@@ -35,11 +34,11 @@
                   </div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Môn học</label>
+                  <label class="control-label col-xs-5 input-sm">Môn học</label>
 
-                  <div class="col-md-8 col-sm-10">
+                  <div class="col-xs-7">
                     <select class="form-control input-sm" name="Username">
                                                 <option class="placeholder-option" value="" selected>Tất cả</option>
                                                 <option value="1">Toán</option>
@@ -60,14 +59,11 @@
               </div>
             </div>
           </form>
-
-          <div class="row form-horizontal" style="min-height: 50px">
+          <div class="row form-horizontal">
             <div class="btn-group">
               <button type="button" class="btn btn-primary btn-xs" ng-click="" ng-disabled="1"><i class="fa fa-files"></i> Xuất PDF</button>
             </div>
           </div>
-
-
           <div id="grid1" ui-grid="reportList" class="grid"><span ng-show="studentList.data.length==0" class="text-center">Không có dữ liệu</span></div>
         </div>
       </div>
