--- a/src/client/templates/school_year.html
+++ b/src/client/templates/school_year.html
@@ -2,7 +2,7 @@
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong><span class="glyphicon glyphicon-th"></span> Tạo năm học</strong>
+        <strong><span class="fa fa-plus-circle"></span> Tạo năm học</strong>
       </div>
       <div class="panel-body notification-area">
         <div class="container-fluid">
@@ -10,9 +10,9 @@
             <div class="row form-horizontal">
                <div class="col-md-3">
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Năm học</label>
+                  <label class="control-label col-xs-4 input-sm">Năm học</label>
 
-                  <div class="col-md-8 col-sm-10">
+                  <div class="col-xs-8">
                     <input type="text" class="form-control input-sm" disabled ng-model=newSchoolYear>
                   </div>
                 </div>
