--- a/src/client/templates/student_edit.html
+++ b/src/client/templates/student_edit.html
@@ -3,16 +3,16 @@
     <h4 ng-bind="title"></h4>
   </div>
   <div class="row form-horizontal">
-    <div class="col-md-6 col-sm-12">
+    <div class="col-sm-6">
       <div class="form-group">
-        <label class="control-label col-md-4 col-sm-2 input-sm">Họ Tên:</label>
-        <div class="col-md-8 col-sm-10">
+        <label class="control-label col-xs-5 input-sm">Họ Tên:</label>
+        <div class="col-xs-7">
           <input ng-disabled="studentData.action == 'view'" ng-model="data.name" type="text" class="form-control input-sm">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-md-4 col-sm-2 input-sm">Giới Tính</label>
-        <div class="col-md-8 col-sm-10">
+        <label class="control-label col-xs-5 input-sm">Giới Tính</label>
+        <div class="col-xs-7">
           <select ng-disabled="studentData.action == 'view'" ng-model="data.gender" class="form-control input-sm">
                         <option value="">Chọn</option>
                         <option value="1">Nam</option>
@@ -21,23 +21,23 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-md-4 col-sm-2 input-sm">Ngày Sinh:</label>
-        <div class="col-md-8 col-sm-10">
+        <label class="control-label col-xs-5 input-sm">Ngày Sinh:</label>
+        <div class="col-xs-7">
           <input ng-disabled="studentData.action == 'view'" ng-model="data.birthday" placeholder="yyyy-mm-dd" type="text" class="form-control input-sm">
         </div>
       </div>
     </div>
-    <div class="col-md-6 col-sm-12">
+    <div class="col-sm-6">
       <div class="form-group">
-        <label class="control-label col-md-4 col-sm-2 input-sm">Email</label>
-        <div class="col-md-8 col-sm-10">
+        <label class="control-label col-xs-5 input-sm">Email</label>
+        <div class="col-xs-7">
           <input ng-disabled="studentData.action == 'view'" ng-model="data.email" type="text" class="form-control input-sm">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-md-4 col-sm-2 input-sm">Địa chỉ</label>
-        <div class="col-md-8 col-sm-10">
-          <input ng-disabled="studentData.action == 'view'" ng-model="data.address" type="text" class="form-control input-sm">
+        <label class="control-label col-xs-5 input-sm">Địa chỉ</label>
+        <div class="col-xs-7">
+          <textarea  rows="2" ng-disabled="studentData.action == 'view'" ng-model="data.address" type="text" class="form-control input-sm"></textarea>
         </div>
       </div>
       <div ng-show="studentData.action != 'view'" class="form-group">
