--- a/src/client/templates/student_list.html
+++ b/src/client/templates/student_list.html
@@ -2,30 +2,30 @@
   <div class="col-lg-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong><span class="glyphicon glyphicon-th"></span> Danh sách học sinh</strong>
+        <strong><span class="fa fa-id-card"></span> Danh sách học sinh</strong>
       </div>
       <div class="panel-body notification-area">
         <div class="container-fluid">
           <form role="form" name="student_list_search" id="student_list_search">
             <div class="row form-horizontal">
-              <div class="col-md-3">
+              <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Mã HS:</label>
-                  <div class="col-md-8 col-sm-10">
+                  <label class="control-label col-xs-5 input-sm">Mã HS:</label>
+                  <div class="col-xs-7">
                     <input ng-model="options.studentCode" type="text" class="form-control input-sm">
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Họ Tên:</label>
-                  <div class="col-md-8 col-sm-10">
+                  <label class="control-label col-xs-5 input-sm">Họ Tên:</label>
+                  <div class="col-xs-7">
                     <input ng-model="options.name" type="text" class="form-control input-sm">
                   </div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Giới Tính</label>
-                  <div class="col-md-8 col-sm-10">
+                  <label class="control-label col-xs-5 input-sm">Giới Tính</label>
+                  <div class="col-xs-7">
                     <select ng-model="options.gender" class="form-control input-sm">
                         <option value="" selected>Tất cả</option>
                         <option value="1">Nam</option>
@@ -34,37 +34,37 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Email</label>
-                  <div class="col-md-8 col-sm-10">
+                  <label class="control-label col-xs-5 input-sm">Email</label>
+                  <div class="col-xs-7">
                     <input ng-model="options.email" type="text" class="form-control input-sm">
                   </div>
                 </div>
 
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Ng.S Từ:</label>
-                  <div class="col-md-8 col-sm-10">
+                  <label class="control-label col-xs-5 input-sm">Ng.S Từ:</label>
+                  <div class="col-xs-7">
                     <input ng-model="options.birthdayFrom" type="text" class="form-control input-sm">
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Ng.S Đến:</label>
-                  <div class="col-md-8 col-sm-10">
+                  <label class="control-label col-xs-5 input-sm">Ng.S Đến:</label>
+                  <div class="col-xs-7">
                     <input ng-model="options.birthdayTo" type="text" class="form-control input-sm">
                   </div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-md-3 col-sm-6">
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Địa chỉ</label>
-                  <div class="col-md-8 col-sm-10">
+                  <label class="control-label col-xs-5 input-sm">Địa chỉ</label>
+                  <div class="col-xs-7">
                     <input ng-model="options.address" type="text" class="form-control input-sm">
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="control-label col-md-4 col-sm-2 input-sm">Năm nhập học</label>
-                  <div class="col-md-8 col-sm-10">
+                  <label class="control-label col-xs-5 input-sm">Năm nhập học</label>
+                  <div class="col-xs-7">
                     <select ng-model="options.yearAdmission" class="form-control input-sm">
                         <option value="" selected>Tất cả</option>
                         <option ng-repeat="data in masterSchoolYear" value="{{data.schoolYearID}}">{{data.schoolYearName}}</option>
@@ -80,7 +80,6 @@
               </div>
             </div>
           </form>
-
           <div class="row form-horizontal">
             <div class="btn-group">
               <button type="button" class="btn btn-primary btn-xs" ng-click="addStudent()"><i class="fa fa-plus-circle"></i> Thêm</button>
