--- a/src/client/templates/student_list.html
+++ b/src/client/templates/student_list.html
@@ -45,13 +45,13 @@
                 <div class="form-group">
                   <label class="control-label col-xs-5 input-sm">Ng.S Từ:</label>
                   <div class="col-xs-7">
-                    <input ng-model="options.birthdayFrom" type="text" class="form-control input-sm">
+                    <input disabled id="from" ng-model="options.birthdayFrom" type="text" class="form-control input-sm">
                   </div>
                 </div>
                 <div class="form-group">
                   <label class="control-label col-xs-5 input-sm">Ng.S Đến:</label>
                   <div class="col-xs-7">
-                    <input ng-model="options.birthdayTo" type="text" class="form-control input-sm">
+                    <input disabled id="to" ng-model="options.birthdayTo" type="text" class="form-control input-sm">
                   </div>
                 </div>
               </div>
