--- a/src/client/templates/student_edit.html
+++ b/src/client/templates/student_edit.html
@@ -17,7 +17,7 @@
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-xs-5 input-sm">Giới Tính</label>
+        <label class="control-label col-xs-5 input-sm">Giới Tính:</label>
         <div class="col-xs-7">
           <select ng-disabled="studentData.action == 'view'" ng-model="data.gender" class="form-control input-sm">
                         <option value="">Chọn</option>
@@ -35,19 +35,25 @@
     </div>
     <div class="col-sm-6">
       <div class="form-group">
-        <label class="control-label col-xs-5 input-sm">Lớp</label>
+        <label class="control-label col-xs-5 input-sm">Lớp:</label>
         <div class="col-xs-7">
           <input ng-disabled="1" ng-model="data.className" type="text" class="form-control input-sm">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-xs-5 input-sm">Email</label>
+        <label class="control-label col-xs-5 input-sm">Lớp đã học:</label>
+        <div class="col-xs-7">
+          <textarea  ng-disabled="1" rows="2"  ng-model="data.prevClassesString" type="text" class="form-control input-sm"></textarea>
+        </div>
+      </div>
+      <div class="form-group">
+        <label class="control-label col-xs-5 input-sm">Email:</label>
         <div class="col-xs-7">
           <input ng-disabled="studentData.action == 'view'" ng-model="data.email" type="text" class="form-control input-sm">
         </div>
       </div>
       <div class="form-group">
-        <label class="control-label col-xs-5 input-sm">Địa chỉ</label>
+        <label class="control-label col-xs-5 input-sm">Địa chỉ:</label>
         <div class="col-xs-7">
           <textarea  rows="2" ng-disabled="studentData.action == 'view'" ng-model="data.address" type="text" class="form-control input-sm"></textarea>
         </div>
