--- a/src/client/templates/student_list.html
+++ b/src/client/templates/student_list.html
@@ -63,7 +63,7 @@
                   </div>
                 </div>
                 <div class="form-group">
-                  <label class="control-label col-xs-5 input-sm">Năm nhập học</label>
+                  <label class="control-label col-xs-5 input-sm">Nhập học</label>
                   <div class="col-xs-7">
                     <select ng-model="options.yearAdmission" class="form-control input-sm">
                         <option value="" selected>Tất cả</option>
