--- a/src/client/templates/popup_student_list.html
+++ b/src/client/templates/popup_student_list.html
@@ -1,19 +1,15 @@
-<div id="modalStudentList" class="modal fade" role="dialog">
-  <div class="modal-dialog">
 
-    <!-- Modal content-->
-    <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal">&times;</button>
-        <h4 class="modal-title">Modal Header</h4>
+        <h4 class="modal-title">Danh sách học sinh</h4>
       </div>
       <div class="modal-body">
-        <p>Some text in the modal.</p>
+        
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary btn-xs" ng-click="addStudentToClass()" data-dismiss="modal">
+          <i class="fa fa-check"></i> Chọn</button>
+          <button type="button" class="btn btn-primary btn-xs" data-dismiss="modal">
+          <i class="fa fa-times"></i> Đóng</button>
       </div>
-    </div>
-
-  </div>
-</div>
+    
