--- a/src/client/templates/school_year.html
+++ b/src/client/templates/school_year.html
@@ -1,26 +1,59 @@
 <div class="row" ng-controller="SchoolYearCtrl">
-  <div class="col-lg-12">
+  <div class="col-md-6 col-sm-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <strong><span class="fa fa-plus-circle"></span> Tạo năm học</strong>
+        <strong><span class="fa fa-plus-circle"></span> Tạo năm học mới</strong>
       </div>
       <div class="panel-body notification-area">
         <div class="container-fluid">
           <form role="form" name="create_school_year" id="create_school_year">
             <div class="row form-horizontal">
-               <div class="col-md-3">
+               <div class="col-sm-8">
                 <div class="form-group">
                   <label class="control-label col-xs-4 input-sm">Năm học</label>
 
                   <div class="col-xs-8">
-                    <input type="text" class="form-control input-sm" disabled ng-model=newSchoolYear>
+                    <input type="text" class="form-control input-sm" disabled ng-model="newSchoolYear">
                   </div>
                 </div>
               </div>
-              <div class="col-md-3">
+              <div class="col-sm-4">
                 <div class="form-group">
                   <div class="col-xs-12 text-right">
                     <button type="submit" class="btn btn-primary btn-xs" ng-click="createSchoolYear()"><i class="fa fa-plus"></i> Tạo Năm Học</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </form>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-md-6 col-sm-12">
+    <div class="panel panel-default">
+      <div class="panel-heading">
+        <strong><span class="fa fa-check-square-o"></span> Chọn năm học mới</strong>
+      </div>
+      <div class="panel-body notification-area">
+        <div class="container-fluid">
+          <form role="form" name="create_school_year" id="create_school_year">
+            <div class="row form-horizontal">
+               <div class="col-sm-8">
+                <div class="form-group">
+                  <label class="control-label col-xs-4 input-sm">Năm học</label>
+                  <div class="col-xs-8">
+                    <select ng-change="selectFutureSchoolYear()" class="form-control input-sm" ng-model="selectedFutureSchoolYear">
+                      <option ng-selected="1">Chọn năm học</option>
+                      <option ng-repeat="future in futureSchoolYear" value="{{future.schoolYearID}}">{{future.schoolYearName}}</option>
+                    </select>
+                  </div>
+                </div>
+              </div>
+              <div class="col-sm-4">
+                <div class="form-group">
+                  <div class="col-xs-12 text-right">
+                    <button type="submit" class="btn btn-primary btn-xs" ng-click="selectSchoolYear()"><i class="fa fa-check-square"></i> Chọn</button>
                   </div>
                 </div>
               </div>
